News spacing fix mobile

--- a/css/layouts/responsive-sidebars-rtl.css
+++ b/css/layouts/responsive-sidebars-rtl.css
@@ -281,7 +281,7 @@
     margin-right: 0%;
     margin-left: -100%;
     clear: right;
-    margin-bottom: 65px;
+    margin-bottom: 115px;
   }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/cdracars\/Dropbox\/ubuntu64-lucid\/www\/drupal\/profiles\/d7_usao_edu\/themes\/mission_repondable\/sass\/layouts\/responsive-sidebars\.scss}line{font-family:\00003267}}
   .html .pane-testimonial .testimonial-title,
