--- a/sass/layouts/responsive-sidebars.scss
+++ b/sass/layouts/responsive-sidebars.scss
@@ -260,7 +260,7 @@ $zen-auto-include-item-base: false;
   .html .pane-testimonial {
     @include zen-grid-item(3, 1);
     @include zen-clear();
-    margin-bottom: 65px;
+    margin-bottom: 115px;
 
     .testimonial-title,
     .testimonial-body,
